--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,19 @@
         <!-- AngularJS -->
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
-        <script src="bower_components/angular-route-styles/route-styles.js"></script> 
+        <script src="bower_components/angular-route-styles/route-styles.js"></script>
+        <!-- Three.js -->
+        <script src="assets/vendor/three-js/three.min.js"></script>
+        <script src="assets/vendor/three-js/Projector.js"></script>
+        <script src="assets/vendor/three-js/CanvasRenderer.js"></script>
+        <script src="assets/vendor/three-js/stats.min.js"></script>
+        <script src="assets/vendor/three-js/Bird.js"></script>
     </head>
     <body > <!-- Llama al module del archivo app.js -->
     <div ng-view></div>
     <!-- librerias de la app -->
     <script src="_wing-watch-core/app.js"></script>
+    <!-- Login -->
+    <script src="_wing-watch-core/componentes/login/loginCtrl.js"></script>
 </body>
 </html>
