Script funcional del modelo completo

--- a/secondary branches/galeria/gallery-single.htm
+++ b/secondary branches/galeria/gallery-single.htm
@@ -68,6 +68,9 @@
                     <h2>ESPECIE DE AVE</h2>
                     <p class="lead">Descripción general brindada por el aficionado que capturó la fotografía</p>
                     <ul class="project-info">
+                        <li><h6>Nombre Común:</h6> Nombre</li>
+                        <li><h6>Nombre en Inglés:</h6> Nombre</li>
+                        <li><h6>Nombre Científico:</h6> Nombre</li>
                         <li><h6>Orden:</h6> Nombre + Descripción</li>
                         <li><h6>Suborden:</h6> Nombre + Descripción</li>
                         <li><h6>Familia:</h6> Nombre + Descripción</li>
