--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/semantic-ui/dist/semantic.min.js"></script>       
         <!--Bootstrap -->
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <!--<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
         <!-- AngularJS -->
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
