--- a/secondary branches/galeria/index.htm
+++ b/secondary branches/galeria/index.htm
@@ -129,7 +129,7 @@ $(document).ready(function () {
                             </span>
                         </span>
                         <a href="gallery-single.htm"><img src="http://i.huffpost.com/gen/1352568/images/o-BALD-EAGLE-facebook.jpg" alt="Gallery"></a>
-                        <span class="project-details"><a href="gallery-single.htm">{{post.NICKNAME}}</a>For an international ad campaign.</span>
+                        <span class="project-details"><a href="gallery-single.htm">{{posts[0].NICKNAME}}</a>For an international ad campaign.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
