Registro de usuarios funcional - Arreglo de procedimiento para insertar usuarios

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,9 @@
         <!-- ngImgCrop https://github.com/alexk111/ngImgCrop -->
         <script src="bower_components/ngImgCrop/compile/minified/ng-img-crop.js"></script>
         <link rel="stylesheet" href="bower_components/ngImgCrop/compile/minified/ng-img-crop.css">
+        <!-- Wow-Alert -->
+        <script src="assets/vendor/SweetAlert/sweetalert.min.js"></script>
+        <link rel="stylesheet" href="assets/vendor/SweetAlert/sweetalert.css">
 
     </head>
     <body > <!-- Llama al module del archivo app.js -->
