Incorporación de la página registro de Aves al app

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
         <!-- ngImgCrop https://github.com/alexk111/ngImgCrop -->
         <script src="bower_components/ngImgCrop/compile/minified/ng-img-crop.js"></script>
         <link rel="stylesheet" href="bower_components/ngImgCrop/compile/minified/ng-img-crop.css">
-        <!-- Wow-Alert -->
+        <!-- Sweet-Alert -->
         <script src="assets/vendor/SweetAlert/sweetalert.min.js"></script>
         <link rel="stylesheet" href="assets/vendor/SweetAlert/sweetalert.css">
 
@@ -48,7 +48,8 @@
     <script src="_wing-watch-core/components/login-registro/registro/registroDirective.js"></script>
     <!-- Home -->
     <script src="_wing-watch-core/components/home/homeCtrl.js"></script>
-    <script src="_wing-watch-core/components/home/homeDirective.js"></script>
+    <!-- Registro ave -->
+    <script src="_wing-watch-core/components/registerBird/registerBirdCtrl.js"></script>
     
 </body>
 </html>
