Encriptación incorporada en la app

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
         <!-- Sweet-Alert -->
         <script src="assets/vendor/SweetAlert/sweetalert.min.js"></script>
         <link rel="stylesheet" href="assets/vendor/SweetAlert/sweetalert.css">
+         <!-- CryptoJS -->
+        <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
 
     </head>
     <body > <!-- Llama al module del archivo app.js -->
