--- a/secondary branches/Ver_Personas/index.html
+++ b/secondary branches/Ver_Personas/index.html
@@ -24,21 +24,75 @@
                 <div class="ui segment">
                     <h3 class="ui dividing header">
                     Filtrar Usuarios
+                    <h5>
+                        <div class="four wide column">       
+                            <input value="1" type="radio" ng-model="filtro.TipoUsuario">
+                            <label>Aficionados</label>
+                            <input value="2" type="radio" ng-model="filtro.TipoUsuario">
+                            <label>Ornitólogos</label>    
+                            <input value="" type="radio" ng-model="filtro.TipoUsuario">
+                            <label>No filtrar</label>
+                        </div>
+                    </h5>
                     </h3>
+                    <div class="ui grid">
+                        <div class="two wide column">
+                            <label>Nombre</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Nombre" ng-model="filtro.Nombre"> 
+                            </div>                    
+                        </div>
+                        <div class="two wide column">
+                            <label>Primer Apellido</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Primer Apellido" ng-model="filtro.P_Apellido"> 
+                            </div> 
+                        </div>
+                        <div class="two wide column">
+                            <label>Segundo Apellido</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Segundo Apellido" ng-model="filtro.S_Apellido"> 
+                            </div> 
+                        </div>
+                        <div class="two wide column">
+                            <label>Teléfono</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Teléfono" ng-model="filtro.Telefono"> 
+                            </div> 
+                        </div>
+                        <div class="two wide column">
+                            <label>Cédula</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Cédula" ng-model="filtro.Cedula"> 
+                            </div> 
+                        </div>
+                        <div class="two wide column">
+                            <label>Correo</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Correo" ng-model="filtro.Correo"> 
+                            </div> 
+                        </div>
+                        <div class="two wide column">
+                            <label>Apodo</label>
+                            <div class="ui input">
+                                <input type="text" placeholder="Apodo" ng-model="filtro.Apodo"> 
+                            </div> 
+                        </div>
+                    </div>
                 </div>
                 <div class="ui segment">
                     <div class="ui six special cards">
-                        <div class="card" ng-repeat="user in users">
+                        <div class="card" ng-repeat="user in users | filter:filtro:strict">
                             <div class="dimmable image">
+                                <img class="ui medium image" ng-src="{{user.Foto}}">
                                 <div class="ui dimmer">
                                     <div class="content">
                                         <div class="center">
-                                            <div class="ui big label">{{user.TipoUsuario}}</div>
+                                            <div class="ui big label">{{getTipo(user.TipoUsuario)}}</div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <img class="ui medium image" src="https://randomuser.me/api/portraits/med/men/79.jpg">
+                            </div>                   
                             <div class="content">
                                 <a class="header">{{user.Nombre + " " + user.P_Apellido + " " + user.S_Apellido}}</a>
                                 <div class="meta">
@@ -70,6 +124,12 @@
     var app = angular.module('myApp', []);
     app.controller('myCtrl', ['$scope','$http', function($scope, $http) {
     $http.get('cargarPersonas.php').success(function(data) { $scope.users = data;  console.log($scope.users);});
+    $scope.getTipo = function(tipo) {
+        if(tipo == "1") {
+            return "Aficionado"
+        }
+        return "Ornitólogo";
+    } 
     }]);
     </script>
 </body>
