--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <div ng-view></div>
     <!-- Librerías -->
     <script src="_wing-watch-core/app.js"></script>
+    
     <!-- Login-Resgitro -->
     <script src="_wing-watch-core/components/login-registro/login-registroCtrl.js"></script>
     <!-- Login -->
@@ -54,9 +55,10 @@
     <script src="_wing-watch-core/components/home/homeCtrl.js"></script>
     <!-- Registro ave -->
     <script src="_wing-watch-core/components/registerBird/registerBirdCtrl.js"></script>
-    <!-- Sidebar -->
-    <script src="_wing-watch-core/reusables/sidebar/sidebarCtrl.js"></script>
-    <script src="_wing-watch-core/reusables/sidebar/sidebarDirective.js"></script>
+    <!-- Editar Usuario -->
+    <script src="_wing-watch-core/components/editarUsuario/editarUsuarioCtrl.js"></script>
     
 </body>
+
+
 </html>
