Registro de Aves e Inserción de Imágenes

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
         <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
         <!-- Sidebar -->
         <link rel="stylesheet" href="assets/css/sidebar.css">
+        <!-- Checkbox-model -->
+        <script src="bower_components/checklist-model/checklist-model.js"></script>
 
     </head>
     <body > <!-- Llama al module del archivo app.js -->
