Registrar Nueva Especie

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
         <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
         <!-- Sidebar -->
         <link rel="stylesheet" href="assets/css/sidebar.css">
+        <!-- Dropdown -->
+        <script src="bower_components/angular-semantic-ui/src/dropdown/dropdown.js"></script>
 
     </head>
     <body > <!-- Llama al module del archivo app.js -->
@@ -57,7 +59,8 @@
     <script src="_wing-watch-core/components/editarUsuario/editarUsuarioCtrl.js"></script>
     <!-- Usuarios -->
     <script src="_wing-watch-core/components/users/usersCtrl.js"></script>
-
+    <!-- reg_especie -->
+    <script src="_wing-watch-core/components/reg_especie/reg_especie.js"></script>
 </body>
 
 
