Carga info galería simple

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
     <script src="_wing-watch-core/components/reg_especie/reg_especie.js"></script>
     <!-- Galería -->
     <script src="_wing-watch-core/components/gallery/galleryCtrl.js"></script>
+    <!-- Galeria Simple -->
+    <script src="_wing-watch-core/components/gallery/gallerySimpleCtrl.js"></script>
 
 </body>
 
