Exportación de datos

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,8 @@
     <script src="_wing-watch-core/components/gallery/galleryCtrl.js"></script>
     <!-- Galeria Simple -->
     <script src="_wing-watch-core/components/gallery/gallerySimpleCtrl.js"></script>
-
+    <!-- Migracion -->
+    <script src="_wing-watch-core/components/migracion/migracionCtrl.js"></script>
 </body>
 
 
